# GA

./: .gitignore  Cargo.toml  config.yaml
data/: qa194.tsp
src/: city.rs  evo_params.rs  logging.rs  main.rs  mutators.rs  specimen.rs  uwaterloo_reader.rs
